--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>GitHub User Finder</title>
   </head>
-  <body class="px-10">
+  <body class="bg-white text-gray-600">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
