--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub User Finder</title>
+    <script>
+    (function () {
+      const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
+      const setting = localStorage.getItem('vueuse-color-scheme') || 'auto'
+      if (setting === 'dark' || (prefersDark && setting !== 'light'))
+        document.documentElement.classList.toggle('dark', true)
+    })()
+    </script>
   </head>
-  <body class="bg-white text-gray-500">
+  <body class="bg-white text-gray-5">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
